--- a/application.yml
+++ b/application.yml
@@ -10,6 +10,6 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-        defaultZone: http://localhost:8761/eureka
+        defaultZone: http://localhost:8761/eureka.
     
     
